feat: Implemented a POST endpoint for user registration that just saves data to the database

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Angelica Simarra",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
