--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Angelica Simarra",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
