--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "tdd with express",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "jest --watch",
+    "start": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --watch",
+    "test:all": "cross-env NODE_ENV=test jest --watchAll",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
@@ -15,12 +16,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "config": "^4.1.1",
     "express": "^5.1.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "cross-env": "^10.0.0",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "jest": "^30.0.5",
