--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "config": "^4.1.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
