--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "config": "^4.1.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "i18next": "^25.5.0",
+    "i18next-fs-backend": "^2.6.0",
+    "i18next-http-middleware": "^3.8.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
