--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^25.5.0",
     "i18next-fs-backend": "^2.6.0",
     "i18next-http-middleware": "^3.8.0",
+    "nodemailer": "^7.0.6",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
@@ -31,6 +32,7 @@
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "jest": "^30.0.5",
+    "nodemailer-stub": "^1.2.2",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4"
