--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^25.5.0",
     "i18next-fs-backend": "^2.6.0",
     "i18next-http-middleware": "^3.8.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
     "sequelize": "^6.37.7",
     "smtp-server": "^3.14.0",
